apis/employees/route-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: employees-ingress
  annotations:
    hub.traefik.io/api: employees-api
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`employees.airlines.EXTERNAL_IP.traefik.me`)
      services:
        - name: employees-app
          port: 3000
      tls:
        certResolver: traefik-airlines
